[gd_scene load_steps=10 format=2]

[ext_resource path="res://Screens/ScreenTitleMenu/Read.png" type="Texture" id=1]
[ext_resource path="res://Screens/ScreenTitleMenu/TItleStuff 1x2.png" type="Texture" id=2]
[ext_resource path="res://Screens/ScreenTitleMenu/ScrollObject.gd" type="Script" id=3]
[ext_resource path="res://Screens/ScreenTitleMenu/Sprite_CropRight.gd" type="Script" id=4]
[ext_resource path="res://Screens/ScreenTitleMenu/OptionIcons 2x5.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 104, 365, 104 )

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="Curve" id=2]
min_value = 0.5
max_value = 3.0
_data = [ Vector2( 0, 0.790909 ), 0.0, 0.0, 0, 0, Vector2( 0.503247, 1.75 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 1.61255e-24, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 0.0588235, 0.470588, 1, 1, 1, 1, 1, 0 )

[node name="ScrollObject" type="Node2D"]
position = Vector2( 250.794, 141.828 )
script = ExtResource( 3 )

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = -274.0
margin_top = -78.0
margin_right = 91.0
margin_bottom = 26.0
rect_scale = Vector2( 1.5, 1.5 )
mouse_filter = 0
mouse_default_cursor_shape = 2
texture = SubResource( 4 )
__meta__ = {
"_editor_description_": "This texturerect is invisible, it's just
here to handle mouse input."
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 274, -78 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 365, 0, 0, 104 )
script = ExtResource( 4 )
toDraw = 0.0

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
material = SubResource( 1 )
position = Vector2( 138.364, 18.0871 )
amount = 6
randomness = 0.2
emission_shape = 2
emission_rect_extents = Vector2( 30, 10 )
direction = Vector2( 5, 0 )
gravity = Vector2( 0, 0 )
scale_amount = 7.21
scale_amount_random = 0.22
scale_amount_curve = SubResource( 2 )
color = Color( 1, 1, 1, 0.435294 )
color_ramp = SubResource( 3 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 170, 0 )

[node name="Text" type="Sprite" parent="Node2D"]
position = Vector2( -90, 0 )
texture = ExtResource( 5 )
hframes = 2
vframes = 5

[node name="TextHighlight" type="Sprite" parent="Node2D"]
visible = false
position = Vector2( -90, 0 )
texture = ExtResource( 5 )
hframes = 2
vframes = 5
frame = 1

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -36.5
margin_right = 226.0
margin_bottom = 36.5
mouse_default_cursor_shape = 2
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[connection signal="gui_input" from="TextureRect2" to="." method="_on_TextureRect2_gui_input"]
[connection signal="mouse_entered" from="TextureRect2" to="." method="_on_TextureRect2_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect2" to="." method="_on_TextureRect2_mouse_exited"]
